# ncdl-gen

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  conanfile.txt  grammar.bnf
cdls/: default.cdl  simple.cdl
ci/: format.sh
cmake/: ncdlgenConfig.cmake.in  ncdlgenPackaging.cmake
data/: default.cdl  simple.cdl
examples/: CMakeLists.txt  conanfile.txt  custom_parser.cpp  example_data.cdl  receiver.cpp  sender.cpp
src/: CMakeLists.txt  equality.cpp  equality.h  forward.h  interface.h  interface_support.h  logging.h  main.cpp  netcdf.cpp  netcdf_interface.cpp  netcdf_interface.h  parser.cpp  parser.h  syntax.cpp  syntax.h  tokeniser.cpp  tokeniser.h  types.cpp  types.h  utils.cpp  utils.h
src/generator/: generator.cpp  generator.h  main.cpp
src/interfaces/: interface.h  vector_interface.cpp  vector_interface.h
src/pipes/: netcdf_pipe.cpp  netcdf_pipe.h  zeromq_configuration.h  zeromq_pipe.cpp  zeromq_pipe.h
src/wrappers/: foo_wrapper.cpp  foo_wrapper.h
test/: CMakeLists.txt  generated_simple.cpp  generated_simple.h  simple.nc  test_common.cpp  test_generator.cpp  test_netcdf_interface.cpp  test_netcdf_pipe.cpp  test_parser.cpp  test_tokeniser.cpp  test_types.cpp  test_vector_interface.cpp  test_zeromq_pipe.cpp
vscode/netcdf-cdl/: LICENSE  README.md  language-configuration.json  package-lock.json  package.json
vscode/netcdf-cdl/src/: extension.ts
vscode/netcdf-cdl/syntaxes/: cdl.tmLanguage.json
